# reshade

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Common.props  Dockerfile  Doxyfile  Examples.sln  FUNDING.yml  FuncStats.txt  GuidStats.txt  LICENSE.md  README.md  REFERENCE.md  ReHook.vcxproj  ReHook.vcxproj.filters  ReShade.sln  ReShade.vcxproj  ReShade.vcxproj.filters  ReShadeFX.vcxproj  ReShadeFX.vcxproj.filters  ReShadeFXC.vcxproj  ReShadeFXC.vcxproj.filters  ReShadeInject.vcxproj  build_avif.ps1  cpp.hint  create_license.bat  depthbufferfix.txt  dinput8.cpp  docker-compose.debug.yml  reshade.cer
.github/workflows/: build.yml  msbuild.yml
dep/: DirectX.props  EasyLogging.props  FCPP.props  GL3W.props  MinHook.props  NanoVG.props  STB.props
dep/easyloggingpp/: .gitignore  .travis.yml  LICENCE.txt  README.md
dep/fcpp/: FCPP.vcxproj  FCPP.vcxproj.filters
dep/gl3w/: GL3W.vcxproj  README.rst  gl3w.c
dep/minhook/: MinHook.vcxproj  MinHook.vcxproj.filters
dep/nanovg/: .gitignore  NanoVG.vcxproj  NanoVG.vcxproj.filters
dep/stb/: README.md  STB.vcxproj  STB.vcxproj.filters
docs/: reflex_markers.md
examples/: ApiTraceAddon.vcxproj  Examples.sln  GenericDepthAddon.vcxproj  README.md  ShaderModDumpAddon.vcxproj  ShaderModReplaceAddon.vcxproj  TextureModDumpAddon.vcxproj  TextureModReplaceAddon.vcxproj
examples/00-basic/: basic.cpp  basic.vcxproj
examples/01-api_trace/: api_trace.cpp  api_trace.vcxproj
examples/01-fps_limit/: fps_limit.vcxproj  fps_limit_addon.cpp
examples/01-framerate_limit/: framerate_limit.vcxproj  framerate_limit_addon.cpp
examples/02-freepie/: freepie.cpp  freepie.vcxproj  freepie_addon.cpp
examples/02-shader_dump/: crc32_hash.hpp  shader_dump.cpp  shader_dump.vcxproj
examples/03-history_window/: history_window.cpp  history_window.vcxproj  history_window_addon.cpp
examples/03-shader_replace/: shader_replace.cpp  shader_replace.vcxproj
examples/04-api_trace/: api_trace.cpp  api_trace.vcxproj  api_trace_addon.cpp
examples/04-texture_dump/: dump_options.hpp  dump_texture.cpp  texturemod_dump.cpp  texturemod_dump.vcxproj
examples/05-shader_dump/: shader_dump_addon.cpp  shader_dump_addon.vcxproj
examples/05-texture_replace/: replace_options.hpp  texturemod_replace.cpp  texturemod_replace.vcxproj
examples/06-history_window/: history_window.cpp  history_window.vcxproj
examples/06-shader_replace/: shader_replace_addon.cpp  shader_replace_addon.vcxproj
examples/06-texture_overlay/: descriptor_set_tracking.cpp  descriptor_set_tracking.hpp  texturemod_overlay.cpp  texturemod_overlay.vcxproj
examples/07-generic_depth/: generic_depth.cpp  generic_depth.vcxproj
examples/07-texture_dump/: dump_texture.cpp  save_texture.cpp  texture_dump_addon.cpp  texture_dump_addon.vcxproj
examples/08-texture_overlay/: descriptor_set_tracking.cpp  descriptor_set_tracking.hpp  texturemod_overlay.cpp  texturemod_overlay.vcxproj
examples/08-texture_replace/: load_texture.cpp  replace_texture.cpp  texture_replace_addon.cpp  texture_replace_addon.vcxproj
include/: README.md  imgui_function_table.hpp  reshade.hpp  reshade_api.hpp  reshade_api_device.hpp  reshade_api_display.hpp  reshade_api_format.hpp  reshade_api_format_utils.hpp  reshade_api_pipeline.hpp  reshade_api_resource.hpp  reshade_events.hpp  reshade_overlay.hpp  std_string_ext.hpp
res/: Exports.def  Exports32.def  Exports64.def  Resource.rc  Resource.rc2  Version.h  exports.def  exports32.def  exports64.def  fxc.rc  lang_ar-SA.rc2  lang_bg-BG.rc2  lang_de-DE.rc2  lang_en-US.rc2  lang_es-ES.rc2  lang_fr-FR.rc2  lang_ja-JP.rc2  lang_ko-KR.rc2  lang_pl-PL.rc2  lang_pt-BR.rc2  lang_ru-RU.rc2  lang_sl-SI.rc2  lang_th-TH.rc2  lang_tr-TR.rc2  lang_zh-CN.rc2  lang_zh-HK.rc2  resource.h  resource.rc  resource.rc2  shader_copy_ps.hlsl  shader_copy_vs.hlsl  shader_imgui_ps.hlsl  shader_imgui_vs.glsl  shader_imgui_vs.hlsl  version.h  version.rc2
setup/: ConfigEditor.xaml  ConfigEditor.xaml.cs  FodyWeavers.xml  Glass.cs  IniFile.cs  MainWindow.xaml  MainWindow.xaml.cs  PEInfo.cs  Packages.config  ReShade Setup.csproj  ReShade.json  ReShade32.json  ReShade32_XR.json  ReShade64.json  ReShade64_XR.json  ReShade64_vk_override_layer.json  Select.xaml  Select.xaml.cs  SelectApp.xaml  SelectApp.xaml.cs  SelectEffects.xaml  SelectEffects.xaml.cs  Settings.xaml  Settings.xaml.cs  VkLayer_override.json  Wizard.xaml  Wizard.xaml.cs  packages.config
source/: Log.cpp  Log.hpp  Main.cpp  addon.cpp  addon.hpp  addon_impl.hpp  addon_manager.cpp  addon_manager.hpp  algorithm.hpp  com_ptr.hpp  com_tracking.hpp  com_utils.hpp  constant_folding.cpp  constant_folding.hpp  critical_section.hpp  directory_watcher.cpp  directory_watcher.hpp  dll_config.cpp  dll_config.hpp  dll_log.cpp  dll_log.hpp  dll_main.cpp  dll_main_app.cpp  dll_main_test_app.cpp  dll_resources.cpp  dll_resources.hpp  dll_settings.cpp  dll_settings.hpp  dllmain.cpp  effect_codegen.hpp  effect_codegen_dxbc.cpp  effect_codegen_dxil.cpp  effect_codegen_glsl.cpp  effect_codegen_hlsl.cpp  effect_codegen_spirv.cpp  effect_expression.cpp  effect_expression.hpp  effect_intrinsics.inl  effect_lexer.cpp  effect_lexer.hpp  (+140 more)
src/: Effect.cpp  Effect.hpp  EffectContext.hpp  EffectContextD3D10.cpp  EffectContextD3D11.cpp  EffectContextD3D9.cpp  EffectContextOGL4.cpp  EffectLexer.cpp  EffectLexer.hpp  EffectLexer.l  EffectOptimizer.cpp  EffectOptimizer.hpp  EffectParser.cpp  EffectParser.hpp  EffectParser.y  EffectParserTree.hpp  EffectPreProcessor.cpp  EffectPreProcessor.hpp  EffectPreprocessor.cpp  EffectPreprocessor.hpp  EffectRuntimeD3D10.cpp  EffectRuntimeD3D11.cpp  EffectRuntimeD3D9.cpp  EffectRuntimeOGL4.cpp  EffectTree.hpp  EffectTreeNodes.hpp  FileWatcher.cpp  FileWatcher.hpp  Hook.cpp  Hook.hpp  HookManager.cpp  HookManager.hpp  Lexer.cpp  Lexer.hpp  Log.cpp  Log.hpp  Main.cpp  Manager.cpp  Manager.hpp  Network.cpp  (+10 more)
tools/: archive_examples.py  build_release.ps1  create_language_template.ps1  fxc.cpp  hasher.ps1  injector.cpp  update_all_languages.ps1  update_imgui_function_table.ps1  update_version.ps1  verbuild.ps1
(+2202 files in other folders)
